--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             background-color: #8e6dbf;
         }
         #them{
-            width: 80%;
+            width: 100%;
             margin: auto;
-            border-radius: 120px;
+            border-radius: 20%;
         }
     </style>
 </head>
