--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <p><strong>Location:</strong> 100 Williamsburg Pkwy, Fate, TX 75132</p>
         <p><strong>Parents:</strong> Joseph & Emily</p>
     </div>
-<i>Gifts are option, but greatly appreciated! If you want to see somethings we may need, click on our registry <a href="https://my.babylist.com/baby-registry-emily-workman">Here</a> </i>
+<i>Gifts are optional, but greatly appreciated! If you want to see somethings we may need, click on our registry <a href="https://my.babylist.com/baby-registry-emily-workman">Here</a> </i>
     <div class="rsvp-section">
         <h2>RSVP</h2>
         <p>Let us know if you’ll be joining us and how many people you’ll be bringing along!</p>
